# py-d2-additional-info

./: .env  .gitignore  README.md  config.py  getManifest.py  log.py  manifest.py  pyproject.toml  script.py
data/: generated_enums.py  legacy-triumphs.json
output/: adept-weapon-hashes.json  bright-engrams.json  catalyst-triumph-icons.json  craftable-hashes.json  crafting_enhanced_intrinsics.py  crafting_resonant_elements.py  d2-event-info.py  d2-trials-objectives.json  d2_event_info.py  d2_font_glyphs.py  d2_season_info.py  engram-rarity-icons.json  events.json  extended-ich.json  generated_enums.py  ghost-perks.json  lightcap-to-season.json  masterworks-with-cond-stats.json  missing_source_info.py  objective_richTexts.py  powerful-rewards.json  pursuits.json  raid-mod-plug-category-hashes.json  season-tags.json  season-to-source.json  seasonal-challenges.json  seasons.json  seasons_backup.json  source_info.py  sources.json  specialty_modslot_metadata.py  spider-mats.json  spider-purchaseables-to-mats.json  stat_effects.py  subclass-plug-category-hashes.json  watermark-to-event.json  watermark-to-season.json
src/: copy_files.py  flipped_enums.py  generate_adept_weapon_hashes.py  generate_bounty_data.py  generate_bright_engram_data.py  generate_catalyst_data.py  generate_categories_translated.py  generate_craftable_hashes.py  generate_crafting_enhanced_intrinsics.py  generate_crafting_resonant_elements.py  generate_engram_rarity_icons.py  generate_enums.py  generate_event_info.py  generate_extended_ich.py  generate_font_glyph_enums.py  generate_ghost_data.py  generate_masterworks_with_cond_stats.py  generate_masterworks_with_cond_stats.py.py  generate_missing_collectible_info.py  generate_missing_faction_tokens.py  generate_mod_slot_data.py  generate_objective_to_triumph.py  generate_powerful_rewards.py  generate_raid_mods.py  generate_rich_text_objective.py  generate_season_info.py  generate_season_to_source.py  generate_season_watermark_backup.py  generate_source_info.py  generate_spider_mats.py  (+5 more)
tools/: JsonIO.py  (+3 more)
(+11 files in other folders)
