[tool.poetry]
authors = ["Tian-que <1605206150@qq.com>"]
description = ""
name = "py-d2-additional-info"
version = "0.1.0"

[tool.poetry.dependencies]
fonttools = "^4.29.1"
loguru = "^0.6.0"
pydantic = {extras = ["dotenv"], version = "^1.9.0"}
python = "^3.9"
requests = "^2.27.1"
ujson = "^5.1.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.931"
types-requests = "^2.27.9"
types-ujson = "^4.2.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.isort]
profile = "black"

[tool.black]
line-length = 89
target-version = ['py39']
